cmake_minimum_required(VERSION 2.6)
include(CheckIncludeFile) 
include(CheckFunctionExists)
include(CheckLibraryExists)
project(nofs C)
set(prefix      ${CMAKE_INSTALL_PREFIX})
set(exec_prefix ${CMAKE_INSTALL_PREFIX})
set(libdir      ${CMAKE_INSTALL_PREFIX}/lib)
set(includedir  ${CMAKE_INSTALL_PREFIX}/include)
ADD_DEFINITIONS(-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -DFUSE_USE_VERSION=22)
check_library_exists(fuse fuse_get_context "" HAVE_FUSE)
IF(HAVE_FUSE)
ELSE(HAVE_FUSE)
  MESSAGE(FATAL_ERROR "No fuse library found.")
ENDIF(HAVE_FUSE)
add_executable(nofs nofs.c)
target_link_libraries(nofs fuse)
install_targets(/bin nofs)
